Double column scoreboard.

--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -20,13 +20,25 @@
         <td valign="top">
             <h2>Ramanujan</h2>
             <table class="table table-striped">
-                <tbody id="ramanujan"></tbody>
+                <tbody id="ramanujan1"></tbody>
+            </table>
+        </td>
+        <td valign="top">
+            <h2>&nbsp;</h2>
+            <table class="table table-striped">
+                <tbody id="ramanujan2"></tbody>
             </table>
         </td>
         <td valign="top">
             <h2>Pascal</h2>
             <table class="table table-striped">
-                <tbody id="pascal"></tbody>
+                <tbody id="pascal1"></tbody>
+            </table>
+        </td>
+        <td valign="top">
+            <h2>&nbsp;</h2>
+            <table class="table table-striped">
+                <tbody id="pascal2"></tbody>
             </table>
         </td>
     </tr>
