--- a/frontend/templates/archive.html
+++ b/frontend/templates/archive.html
@@ -29,6 +29,60 @@ a round since we haven't done every round every year. In each year, the more dif
 
         <tbody>
             <tr>
+                <th rowspan="2">2017</th>
+                <th>Pascal</th>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/al_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/ge_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/cp_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/nt_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>N/A</td>
+                <td>
+                    <a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+            </tr>
+
+            <tr>
+                <th>Ramanujan</th>
+                <td>
+                    <a href="{% static 'archive/2017/ramanujan/al_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/ramanujan/ge_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/ramanujan/cp_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/ramanujan/nt_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+                <td>N/A</td>
+                <td>
+                    <a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Full key</a>
+                </td>
+            </tr>
+
+
+            <tr>
                 <th rowspan="2">2016</th>
                 <th>Euclid</th>
                 <td>
