Fixed guts archive.

--- a/frontend/templates/archive.html
+++ b/frontend/templates/archive.html
@@ -51,7 +51,7 @@ a round since we haven't done every round every year. In each year, the more dif
                 </td>
                 <td>N/A</td>
                 <td>
-                    <a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Full key</a>
                 </td>
             </tr>
 
@@ -77,7 +77,7 @@ a round since we haven't done every round every year. In each year, the more dif
                 </td>
                 <td>N/A</td>
                 <td>
-                    <a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Full key</a>
                 </td>
             </tr>
 
