--- a/frontend/templates/archive.html
+++ b/frontend/templates/archive.html
@@ -32,52 +32,64 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th rowspan="2">2017</th>
                 <th>Pascal</th>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/al_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/al.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/al_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/ge_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/ge.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/ge_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/cp_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/cp.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/cp_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/nt_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/nt_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>N/A</td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/pascal/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Full key</a>
                 </td>
             </tr>
 
             <tr>
                 <th>Ramanujan</th>
                 <td>
-                    <a href="{% static 'archive/2017/ramanujan/al_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/al.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/al_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/ramanujan/ge_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/ge.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/ge_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/ramanujan/cp_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/cp.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/cp_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/ramanujan/nt_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/nt_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
-                    <a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/team_key.pdf' %}" target="_blank">Full key</a>
                 </td>
                 <td>N/A</td>
                 <td>
-                    <a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <a href="{% static 'archive/2017/ramanujan/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Full key</a>
                 </td>
             </tr>
 
