Add statistics link.

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -66,6 +66,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'student_view' %}">Students</a></li>
                                 <li><a href="{% url 'team_view' %}">Teams</a></li>
+                                <li><a href="{% url 'statistics' %}">Statistics</a></li>
                             </ul>
                         </li>
                     {% else %}
