--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -10,14 +10,10 @@
     The Montgomery Blair Math Tournament
 </p>
 <p class="main-text" style="margin: 0 auto; max-width: 820px; padding-bottom: 2em;">
-    <span class="text-muted" >A</span>
-    <strong>mathematics competition</strong>
-    <span class="text-muted">for</span>
-    <strong>middle school students</strong>
-    <span class="text-muted">in the</span>
-    <strong>Maryland area</strong>
-    <span class="text-muted">on</span>
-    <strong>Saturday, April 1st, 2017</strong>.
+    <span>
+        A mathematics competition for middle school students in the Maryland area on
+        Saturday, April 7th, 2018
+    </span>
     <a href="{% url 'register' %}" style="color: #ba2222">Register &#x276f;</a>
 </p>
 
