--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -13,37 +13,37 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/david.png' %}">
         <h3>David Wu</h3>
-        Logistics
+        <p>Logistics</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/annie.png' %}">
         <h3>Annie Zhao</h3>
-        Communications
+        <p>Communications</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/jamie.png' %}">
         <h3>Jamie Vinson</h3>
-        Competition Day
+        <p>Competition Day</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/sambuddha.png' %}">
         <h3>Sambuddha Chattopadhyay</h3>
-        Logistics
+        <p>Logistics</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/guang.png' %}">
         <h3>Guang Cui</h3>
-        Problem Czar
+        <p>Problem Czar</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/pratik.png' %}">
         <h3>Pratik Rathore</h3>
-        Problem Czar
+        <p>Problem Czar</p>
     </div>
 </div>
 
@@ -52,19 +52,24 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 <p>We're very thankful to our problem writers, without whom we wouldn't have a contest:</p>
 
 <ul>
-    <li>Pratik Rathore</li>
-    <li>Sambuddha Chattopadhyay</li>
-    <li>Dlihan Salgado</li>
-    <li>Guang Cui</li>
-    <li>Daniel Zhu</li>
     <li>Steven Qu</li>
-    <li>Jamie Vinson</li>
-    <li>David Wu</li>
+    <li>Guang Cui</li>
     <li>Kevin Qian</li>
-    <li>Annie Zhao</li>
-    <li>Soyoung Hong</li>
     <li>Jyotsna Rao</li>
-    <li>Anson Berns</li>
+    <li>David Wu</li>
+    <li>Daniel Zhu</li>
+    <li>Kevin A. Zhou</li>
+    <li>Haydn Gwyn</li>
+    <li>Jason Hsu</li>
+    <li>Jacob Stavrianos</li>
+    <li>Jesse Silverberg</li>
+    <li>Jason Hsu</li>
+    <li>Dilhan Salgado</li>
+    <li>Daniel Monroe</li>
+    <li>Ambrose Yang</li>
+    <li>Seung-Hyun Kwon</li>
+    <li>Emmy Song</li>
+    <li>Eva Quittman</li>
 </ul>
 
 <h2>Website</h2>
