--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -11,27 +11,21 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 
 <div class="row">
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/david.png' %}">
+        <img src="{% static 'images/people/david.jpg' %}">
         <h3>David Wu</h3>
         <p>Logistics</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/annie.png' %}">
+        <img src="{% static 'images/people/annie.jpg' %}">
         <h3>Annie Zhao</h3>
         <p>Communications</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/jamie.png' %}">
-        <h3>Jamie Vinson</h3>
-        <p>Competition Day</p>
-    </div>
-
-    <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/sambuddha.png' %}">
-        <h3>Sambuddha Chattopadhyay</h3>
-        <p>Logistics</p>
+        <img src="{% static 'images/people/jyo.jpg' %}">
+        <h3>Jyotsna Rao</h3>
+        <p>Problem Writer</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
@@ -41,10 +35,26 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/pratik.png' %}">
-        <h3>Pratik Rathore</h3>
+        <img src="{% static 'images/people/daniel.jpg' %}">
+        <h3>Daniel Zhu</h3>
         <p>Problem Czar</p>
     </div>
+
+    <div class="col-md-3 col-xs-6 about-person">
+        <img src="{% static 'images/people/steven.jpg' %}">
+        <h3>Steven Qu</h3>
+        <p>Logistics</p>
+    </div>
+
+    <div class="col-md-3 col-xs-6 about-person">
+        <img src="{% static 'images/people/stav.jpg' %}">
+        <h3>Jacob Stavrianos</h3>
+        <p>Competition Day</p>
+    </div>
+
+
+
+
 </div>
 
 <h2>Problem Writers</h2>
