--- a/frontend/templates/rules.html
+++ b/frontend/templates/rules.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1 class="lowerer">MBMT Official Contest Rules</h1>
-<p>Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 1st, 2017. This page includes all the information about the competition. Contact information can be found on the <a href="/info"> information page</a>.</p>
+<p>Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 7th, 2018. This page includes all the information about the competition. Contact information can be found on the <a href="/info"> information page</a>.</p>
 
 <a name="registration"></a><h3>Registration</h3>
 <ol class="top"> 
