--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -29,7 +29,7 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/guang.png' %}">
+        <img src="{% static 'images/people/guang.jpg' %}">
         <h3>Guang Cui</h3>
         <p>Problem Czar</p>
     </div>
