--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -17,21 +17,21 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/guang.jpg' %}">
-        <h3>Guang Cui</h3>
-        <p>Problem Czar</p>
-    </div>
-
-    <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/annie.jpg' %}">
         <h3>Annie Zhao</h3>
         <p>Communications</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
+        <img src="{% static 'images/people/guang.jpg' %}">
+        <h3>Bob Mjilica</h3> <!-- Guang Cui -->
+        <p>Problem Czar</p>
+    </div>
+
+    <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/jyo.jpg' %}">
         <h3>Jyotsna Rao</h3>
-        <p>Problem Writer</p>
+        <p>Competition Day</p>
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
@@ -41,19 +41,16 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
     </div>
 
     <div class="col-md-3 col-xs-6 about-person">
-        <img src="{% static 'images/people/daniel.jpg' %}">
-        <h3>Daniel Zhu</h3>
-        <p>Problem Czar</p>
-    </div>
-
-    <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/stav.jpg' %}">
         <h3>Jacob Stavrianos</h3>
         <p>Competition Day</p>
     </div>
 
-
-
+    <div class="col-md-3 col-xs-6 about-person">
+        <img src="{% static 'images/people/daniel.jpg' %}">
+        <h3>Daniel Zhu</h3>
+        <p>Problem Czar</p>
+    </div>
 
 </div>
 
