--- a/frontend/templates/info.html
+++ b/frontend/templates/info.html
@@ -31,6 +31,6 @@
 
 
 <h3>Contact</h3>
-<p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, David Stein, at <script>email("David_O_Stein", "mcpsmd.org");</script>. We look forward to seeing you and your Mathletes at the 3rd annual MBMT!</p>
+<p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, Jeremy Schwartz, at <script>email("Jeremy_R_Schwartz", "mcpsmd.org");</script>. We look forward to seeing you and your Mathletes at the 4th annual MBMT!</p>
 
 {% endblock %}
