Fixing up sponsors

--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -89,6 +89,6 @@ This website, as well as the MBMT internal scoring system, is written by
 
 <h2>Sponsors</h2>
 
-<p>MBMT is sponsored by the Magnet Foundation.</p>
+<p>MBMT is sponsored by the Magnet Foundation and Art of Problem Solving.</p>
 
 {% endblock %}
