Fixed Bob Mjilica

--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -24,7 +24,7 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 
     <div class="col-md-3 col-xs-6 about-person">
         <img src="{% static 'images/people/guang.jpg' %}">
-        <h3>Bob Mjilica</h3> <!-- Guang Cui -->
+        <h3>Guang Cui</h3> <!-- Guang Cui -->
         <p>Problem Czar</p>
     </div>
 
