--- a/frontend/templates/about.html
+++ b/frontend/templates/about.html
@@ -58,7 +58,7 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 
 <p>We're very thankful to our problem writers, without whom we wouldn't have a contest:</p>
 
-<ul>
+<ul class="contributors">
     <li>Steven Qu</li>
     <li>Guang Cui</li>
     <li>Kevin Qian</li>
@@ -82,13 +82,18 @@ MBMT is proudly organized and executed entirely by students from the Montgomery 
 <h2>Website</h2>
 
 This website, as well as the MBMT internal scoring system, is written by
-    <a href="https://singerng.github.io/">Noah Singer</a> (Github: <a href="https://github.com/singerng">@singerng</a>)
-    and <a href="https://noahbkim.com/">Noah Kim</a> (Github: <a href="https://github.com/noahbkim">@noahbkim</a>).
+    <a href="https://singerng.github.io/" target="_blank">Noah Singer</a> (Github: <a href="https://github.com/singerng" target="_blank">@singerng</a>)
+    and <a href="https://noahbkim.com/" target="_blank">Noah Kim</a> (Github: <a href="https://github.com/noahbkim" target="_blank">@noahbkim</a>).
     It's written in <a href="https://djangoproject.com">Django</a> and hosted on our school servers. The source is
     on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
 <h2>Sponsors</h2>
 
 <p>MBMT is sponsored by the Magnet Foundation and Art of Problem Solving.</p>
+
+<img src="{% static "images/magnet.jpg" %}" height="150px">
+<img src="{% static "images/aops.png" %}" style="margin-left: 1rem;"?>
+
+<div style="height: 2rem;"></div>
 
 {% endblock %}
