--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -56,7 +56,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{% url 'student_scoreboard' %}">Student scoreboard</a></li>
                                 <li><a href="{% url 'team_scoreboard' %}">Team scoreboard</a></li>
-                                <li><a href="{% url 'live' round="guts" %}">Live guts</a></li>
+                                <li><a href="{% url 'live' round_id='guts' %}">Live guts</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
