--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "home/../../../home/templates/shared/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block content %}
