--- a/grading/templates/grading/statistics.html
+++ b/grading/templates/grading/statistics.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "home/../../../home/templates/shared/base.html" %}
 
 {% block content %}
 <h1>{{ current.name }} Problem Statistics</h1>
