--- a/grading/templates/grading/student/view.html
+++ b/grading/templates/grading/student/view.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "home/../../../../home/templates/shared/base.html" %}
 {% load staticfiles %}
 {% load grading_status %}
 {% load attending %}
