--- a/grading/templates/grading/team/edit.html
+++ b/grading/templates/grading/team/edit.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "home/../../../../home/templates/shared/base.html" %}
 
 {% block content %}
 <table id="teams" class="teams table table-striped table-hover">
