--- a/grading/templates/grading/team/scoreboard.html
+++ b/grading/templates/grading/team/scoreboard.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% extends "home/../../../../home/templates/shared/base.html" %}
 {% load staticfiles %}
 
 {% block extrahead %}
