--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -1,22 +1,41 @@
-{% extends "home/base.html" %}
+{% extends "shared/base.html" %}
 
 {% block content %}
 
 <h1 class="lowerer">Contest Information</h1>
+<p>
+    MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and pursuing mathematics beyond the school curriculum.
+    {% if competition %}We are pleased to announce that, for the {{ competition.year }} year, the Montgomery Blair Math Team is hosting the Montgomery Blair Math Tournament (MBMT) on <b>{{ competition.date|date:"F jS, Y" }}</b>!
+    {% else %}Currently, there is no scheduled competition!{% endif %}
+</p>
 
-<p>We are pleased to announce that, for the fourth year, the Montgomery Blair Math Team is hosting the Montgomery Blair Math Tournament (MBMT) on <b>Saturday, April 7th, 2018!</b> MBMT is a free middle school math competition that seeks to excite students’ interests in mathematics and pursuing mathematics beyond the school curriculum.</p>
-
+{% if competition %}
 <h3>Registration</h3>
-<p>We would like all math team sponsors to <b>register by March 1st, 2018</b>. This will help us estimate the number of teams participating and assist us with logistics. To see more information on registration, visit <a href="{% url 'register' %}">here</a>. To register, visit <a href="{% url 'register' %}">here</a>.</p>
+<p>
+    Registration will open on <b>{{ competition.date_registration_start|date:"F jS, Y" }}</b>.
+    We would like all math team sponsors to <b>register by {{ competition.date_registration_end|date:"F jS, Y" }}</b>.
+    This will help us estimate the number of teams participating and assist us with logistics. To register, visit <a href="{% url "coaches:register" %}">here</a>.
+</p>
+{% endif %}
 
+{% if competition %}
 <h3>Logistics</h3>
-<p>The fourth annual MBMT will occur in <strong>Montgomery Blair HS on April 7th, 2018 from 12:00 pm - 6:00 pm</strong>. Our address is <a href="https://www.google.com/maps/place/Montgomery+Blair+High+School/@39.0183042,-77.01385,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>. Please arrive on the University Boulevard side of the school. <b>Snacks and drinks will be provided for students</b>. This is a change from last year. Additionally, snacks will be provided for coaches in the grading room (room 161, a computer lab). Coaches are invited to bring snacks for their own team, although it is not necessary.</p>
+<p>
+    The fourth annual MBMT will occur in <strong>Montgomery Blair High School</strong> on <strong>{{ competition.date|date:"F jS, Y" }}</strong> from <strong>12:00 pm - 6:00 pm</strong>.
+    Our address is <a href="https://www.google.com/maps/place/Montgomery+Blair+High+School/@39.0183042,-77.01385,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>.
+    Please arrive on the University Boulevard side of the school.
+    <b>Snacks and drinks will be provided for students</b>.
+    Additionally, snacks will be provided for coaches in the grading room (room 161, a computer lab).
+    Coaches are invited to bring snacks for their own team, although it is not necessary.
+</p>
+{% endif %}
 
 <h3>Contest</h3>
 <p>MBMT consists of four rounds: the Subject Tests (of which students take two subjects among Algebra, Geometry, Combinatorics, or Number Theory), the Team Round, the Guts Round, and the Fun Round. Please note that there is no Sprint Round this year. Each Subject Test consists of eight questions on one subject and lasts thirty minutes. The Team Round contains fifteen questions for all team members to collaboratively solve in forty-five minutes. The Guts Round (something many middle school students have not seen before), an hour long round, is graded live and requires team members to work together on progressively harder five-problem sets, each of which is worth more points than the previous set. Finally, the Fun Round is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round. All of the rounds, except for the Fun Round, will be split by division.</p>
 <p>Based on reflections made after last year’s tournament, we have recalibrated the accessibility and difficulty of problems in both divisions. Our guiding philosophy is that every participant in MBMT should have a shot at winning, while still being challenged at the highest level.</p>
 <p>Individual and team winners in each division will receive trophies or medals! Team scores are calculated using Team and Guts round scores, combined with a weighted average of individual scores, and teams with the highest scores in each division win. The individual awards are for high-scoring individuals in each subject test and overall, combining the subject test scores. There are also additional awards for high performance on the Guts round. Finally, we also provide the Eric Walstein Award to the highest-scoring 6th grade student.</p>
 
+{% if competition %}
 <h3>Schedule</h3>
 <table class="schedule">
     <tr><td>12:00 - 12:30 PM</td><td>Registration, finding assigned tables</td></tr>
@@ -28,9 +47,12 @@
     <tr><td>4:15 - 5:00 PM</td><td>Fun Round, Tiebreakers</td></tr>
     <tr><td>5:10 - 5:45 PM</td><td>Awards Ceremony</td></tr>
 </table>
-
+{% endif %}
 
 <h3>Contact</h3>
-<p>If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, Jeremy Schwartz, at <script>email("Jeremy_R_Schwartz", "mcpsmd.org");</script>. We look forward to seeing you and your Mathletes at the 4th annual MBMT!</p>
+<p>
+    If you have any questions, please contact the Montgomery Blair math team captains at <script>email("mbhs.math.team", "gmail.com");</script>, or our coach, Jeremy Schwartz, at <script>email("Jeremy_R_Schwartz", "mcpsmd.org");</script>.
+    {% if competition %}We look forward to seeing you and your Mathletes at the {{ competition.year }} annual MBMT!{% endif %}
+</p>
 
 {% endblock %}
