--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -1,13 +1,20 @@
-{% extends "home/base.html" %}
+{% extends "home/../shared/base.html" %}
 
 {% block content %}
 
-<h1 class="lowerer">MBMT Official Contest Rules</h1>
-<p>Welcome to the third annual Montgomery Blair Math Tournament (MBMT)! MBMT is a free middle school math contest that seeks to inspire students’ interest in mathematics and to encourage them to explore math beyond the school curriculum. This year, MBMT will be hosted at Montgomery Blair High School (MBHS) on April 7th, 2018. This page includes all the information about the competition. Contact information can be found on the <a href="/info"> information page</a>.</p>
-
+<h1 class="lowerer">Official Rules</h1>
+<p>
+    Welcome to the third annual Montgomery Blair Math Tournament, or MBMT for short!
+    MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum.
+    Contest details can be found on the <a href="{% url "home:about" %}">information page</a>.
+</p>
 <a name="registration"></a><h3>Registration</h3>
 <ol class="top"> 
-    <li>Participants in MBMT compete in teams of 5 (with some exceptions, discussed further in #4). The math team sponsors of each school/organization register individual student teams through the website via the <a href="/register">registration page</a>. There is no limit to the number of full teams a school or organization may send.</li>
+    <li>
+        Participants in MBMT compete in teams of 5 (with some exceptions, discussed further in #4).
+        The math team sponsors of each school/organization register individual student teams through the website via the <a href="{% url "coaches:register" %}">registration page</a>.
+        There is no limit to the number of full teams a school or organization may send.
+    </li>
     <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting. More information about the Subject Tests can be found on the <a href="/topics">topics page</a>.</li>
     <ol>
         <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li>
