--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -15,14 +15,14 @@
         The math team sponsors of each school/organization register individual student teams through the website via the <a href="{% url "coaches:register" %}">registration page</a>.
         There is no limit to the number of full teams a school or organization may send.
     </li>
-    <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting. More information about the Subject Tests can be found on the <a href="/topics">topics page</a>.</li>
+    <li><b class="red">Subject Tests are specifically limited</b>. The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
     <ol>
         <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li>
         <li>A team of 4 will be required to have at least 1 test per subject, but no more than 3 tests per subject.</li>
         <li>A team of 3 will only be required to have at least 1 test per subject.</li>
         <li>Teams of 1 or 2 have no restrictions; however, refer to rule #4 below for more information on teams of 1 or 2.</li>
     </ol>
-    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Pascal,” or Division B, “Ramanujan.” Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b> (discussed further on the  <a href="/topics">topics page</a>).</li>
+    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Pascal,” or Division B, “Ramanujan.” Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b>.</li>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded.</li>
     <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups, to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
@@ -48,7 +48,7 @@
         <li>Ordered 6-tuples: (<em>a</em>, <em>b</em>, <em>c</em>, <em>d</em>, <em>e</em>, <em>f</em>)</li>
         <li><em>a,</em> <em>b, c,</em> etc. are numbers. Any answer in the form of an ordered <em>n</em>-tuple MUST include the parentheses and commas.</li>
     </ul>
-    <li><b>Lines in geometry</b>: if a question asks "compute AB" or states that "AB = 10", this refers to the length of line AB or the distance from A to B.</li>
+    <li><b>Lines in geometry</b>: if a question asks "compute AB" or states that "AB = 10", this refers to the length of line AB or the distance between the points A and B.</li>
 </ol>
 
 <a name="terminology"></a><h3>Important Terminology</h3>
