--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                         <span class="icon-bar"></span>
