--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <nav id="menu" class="navbar navbar-default navbar-fixed-top navbar-xs">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-collapse">
                         <span class="icon-bar"></span>
@@ -23,7 +23,6 @@
                     </button>
                     <a class="navbar-brand" href="{% url "home:index" %}">MBMT</a>
                 </div>
-
                 <div class="collapse navbar-collapse" id="nav-collapse">
                     <ul class="nav navbar-nav navbar-left">
                         {% block menu %}
@@ -33,24 +32,26 @@
                         <li><a href="{% url "home:archive" %}">Archive</a></li>
                         {% endblock %}
                     </ul>
-
                     <ul class="nav navbar-nav navbar-right">
                         {% block shortcuts %}
                         <li><a href="{% url "coaches:register" %}">Register</a></li>
-                        <li><a href="{% url "home:login" %}">Login</a></li>
+                        <li>
+                            {% if user.is_authenticated %}
+                            <a href="{% url "home:logout" %}">Logout</a>
+                            {% else %}
+                            <a href="{% url "home:login" %}">Login</a>
+                            {% endif %}
+                        </li>
                         {% endblock %}
                     </ul>
                 </div>
             </div>
         </nav>
-
         <div class="container">
             <div id="content" class="container">
-                {% block content %}
-                {% endblock %}
+                {% block content %}{% endblock %}
             </div>
         </div>
-
         <footer class="footer">
             <div class="container">
                 <span class="text-muted">Copyright &copy; 2014-17 Montgomery Blair Math Team.</span>
